feat: added extract.html

--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -36,6 +36,8 @@
 
                         <a href="/upload">ISO Upload</a>
 
+                        <a href="/extract">Extract Files</a>
+
                     </div>
 
                 </div>
