feat: creating and connecting thr fom in extract.html to the extract files endpoint

--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -158,11 +158,11 @@
 
                     <div class="dropdown-content">
 
-
-
                         <a href="/hash-lookup">Hash Lookup</a>
 
                         <a href="/upload">ISO Upload</a>
+
+                        <a href="/extract">Extract Files</a>
 
 
                     </div>
