--- a/darkmoon/api/templates/extract.html
+++ b/darkmoon/api/templates/extract.html
@@ -4,12 +4,55 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
+    <script src="https://unpkg.com/htmx.org@latest/dist/htmx.min.js"></script>
 </head>
 
-<script async defer src="https://buttons.github.io/buttons.js"></script>
+<script type="text/javascript">
 
-<body class="homepage">
+    document.addEventListener("htmx:responseError", function (event) {
+        const response = event.detail.xhr.response;
 
+        const error = JSON.parse(response);
+
+        const fileComparison = `<b>${error.detail}`;
+        document.getElementById("extract").innerHTML = fileComparison;
+    });
+
+    // document.addEventListener("htmx:configRequest", function (event) {
+    //      if (event.detail.verb === "post") {
+    //          document.getElementById("extract").style.display = "block";
+    //      }
+    //  });
+    function openForm() {
+
+        document.getElementById("popupForm").style.display = "block";
+        document.getElementById("shadow").style.display = "block";
+
+    }
+    function closeForm() {
+
+        document.getElementById("popupForm").style.display = "none";
+        document.getElementById("shadow").style.display = "none";
+
+    }
+    function showPopupBox() {
+
+        document.getElementById("popupBox").classList.remove(".hidden");
+
+    }
+
+</script>
+<script type="text/javascript">
+    document.addEventListener("htmx:afterRequest", function (event) {
+        const response = event.detail.xhr.response;
+        const jsonResponse = JSON.parse(response);
+        const message = jsonResponse.message;
+        const searchHah = `Message: ${message}`
+        document.getElementById("extract_output").innerHTML = searchHash;
+    });
+</script>
+
+<body>
     <header>
 
         <div class="logo">
@@ -28,7 +71,7 @@
                 <button class="dropbtn"><a href="/">Home</a></button>
                 <div class="dropdown">
 
-                    <button class="dropbtn">Tools</button>
+                    <button class="button button1">Tools</button>
 
                     <div class="dropdown-content">
 
@@ -48,6 +91,29 @@
 
     </header>
 
+    <h1></h1>
+    <div style="padding:40px;">
+        <form id="extract_files" hx-trigger="submit" hx-post='/metadata/extract-files' hx-target="#extract_output"
+            hx-swap="innerHTML" hx-encoding='multipart/form-data'>
+            <h3>File Extraction</h3>
+            <hr>
+            <h1></h1>
+            <h2> .ISO </h2>
+            <input id=" source_iso" type="text" required="required" name="source_iso"><br>
+            <hr>
+            <h1></h1>
+            <h2> File </h2>
+            <input id="file" type="file" required="required" name="file"><br>
+            <input type="submit" value="Upload" hx-indicator="#extract_output">
+        </form>
+        <h1></h1>
+        <div class="formPopup" id="popupForm">
+
+            <p id="extract_output"> </p>
+            <button type="button" class="btncancel" onclick="closeForm()">X</button>
+
+        </div>
+    </div>
 </body>
 
 </html>
