--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -187,7 +187,7 @@
 
         <h1></h1>
 
-        <form id="hash_upload" hx-get="/metadata/hashSearch" hx-target="#hash_output" hx-trigger="submit"
+        <form id="hash_upload" hx-get="/metadata/hash-search" hx-target="#hash_output" hx-trigger="submit"
             hx-swap="innerHTML" onsubmit="showPopupBox()">
 
             <h3>Hash Search</h3>
@@ -219,7 +219,7 @@
 
         <h2></h2>
 
-        <form id="file_upload" hx-trigger="submit" hx-post='/metadata/hashComparison' hx-target="#file_output"
+        <form id="file_upload" hx-trigger="submit" hx-post='/metadata/hash-comparison' hx-target="#file_output"
             hx-swap="innerHTML" hx-encoding='multipart/form-data'>
 
             <h3>Hash Comparison</h3>
