feat: created a list of names

--- a/darkmoon/api/templates/about.html
+++ b/darkmoon/api/templates/about.html
@@ -40,9 +40,17 @@
             </ul>
         </nav>
     </header>
-    <h2 id="border" style="color:white" text-align="center">Developers: Sean Meyer, Dominique Waldon, Pranav Elavarthi,
-        Asmita
-        Karandikar,
-        Siri Chatradi, Ping Kirsch, Mridula Thurasiraman, Viraj Ganguli</h2>
+    <h2 id="border" style="color:white" text-align="center">
+        Developers:
+        <ul>Paige Maute</ul>
+        <ul>Asmita Karandikar</ul>
+        <ul>Siri Chatradi</ul>
+        <ul>Edward Ping Kirsch</ul>
+        <ul>Mridula Thulasiraman</ul>
+        <ul>Viraj Ganguli</ul>
+        <ul> Dominique Waldon</ul>
+        <ul>Sean Meyer</ul>
+        <ul>Pranav Elavarthi</ul>
+    </h2>
 
 </body>
