--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -208,12 +208,12 @@
 
         <div class="formPopup" id="popupForm">
 
-            <p id="hash_output"> </p>
+            <div id="hash_output">
+                <div id="load-button" class="loading-spinner"></div>
+            </div>
             <button type="button" class="btncancel" onclick="closeForm()">X</button>
 
         </div>
-
-
 
 
 
@@ -242,7 +242,9 @@
 
         <div class="formPopup" id="popupForm">
 
-            <p id="file_output"> </p>
+            <div id="file_output">
+                <div id="load-button" class="loading-spinner"></div>
+            </div>
 
             <button type="button" class="btncancel" onclick="closeForm()">Close</button>
 
