--- a/darkmoon/api/templates/about.html
+++ b/darkmoon/api/templates/about.html
@@ -6,51 +6,158 @@
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
 </head>
 
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+
 <body>
+
     <header>
+
+
 
         <div class="logo">
 
+
+
             <h1 id="blackoutline">
+
+
 
                 <p>Darkmoon</p>
 
+
+
             </h1>
+
+
 
         </div>
 
+
+
         <nav>
+
+
 
             <ul>
                 <button class="dropbtn"><a href="/">Home</a></button>
                 <div class="dropdown">
 
+
+
                     <button class="button button1">Tools</button>
 
+
+
                     <div class="dropdown-content">
+
+
 
                         <a href="/hash-lookup">Hash Lookup</a>
 
                         <a href="/upload">ISO Upload</a>
 
+
                     </div>
 
-                </div>
-                <button class="dropbtn"><a href="/about">About</a></button>
-            </ul>
-        </nav>
-    </header>
-    <h2 id="border" style="color:white" text-align="center">
-        Developers:
-        <ul>Paige Maute</ul>
-        <ul>Asmita Karandikar</ul>
-        <ul>Siri Chatradi</ul>
-        <ul>Edward Ping Kirsch</ul>
-        <ul>Mridula Thulasiraman</ul>
-        <ul>Viraj Ganguli</ul>
-        <ul> Dominique Waldon</ul>
-        <ul>Sean Meyer</ul>
-        <ul>Pranav Elavarthi</ul>
-    </h2>
 
-</body>
+
+                </div>
+
+                <button class="dropbtn"><a href="/about">About</a></button>
+
+            </ul>
+
+
+
+        </nav>
+
+
+
+    </header>
+
+    <div style="padding:90px;">
+
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <div class="container">
+                        <h2>Mridula Thulasiraman</h2>
+                        <p class="title">CEO &amp; Founder</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>example@example.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="card">
+                    <div class="container">
+                        <h2>Mike Ross</h2>
+                        <p class="title">Art Director</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>example@example.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="card">
+                    <div class="container">
+                        <h2>John Doe</h2>
+                        <p class="title">Designer</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>example@example.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <div class="container">
+                        <h2>John Doe</h2>
+                        <p class="title">Designer</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>example@example.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <div class="container">
+                        <h2>John Doe</h2>
+                        <p class="title">Designer</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>example@example.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <div class="container">
+                        <h2>John Doe</h2>
+                        <p class="title">Designer</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>example@example.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <div class="container">
+                        <h2>John Doe</h2>
+                        <p class="title">Designer</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>example@example.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <div class="container">
+                        <h2>John Doe</h2>
+                        <p class="title">Designer</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>example@example.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
