--- a/darkmoon/api/templates/about.html
+++ b/darkmoon/api/templates/about.html
@@ -82,7 +82,7 @@
                 <div class="card">
                     <div class="container">
                         <h2>Mridula Thulasiraman</h2>
-                        <p class="title">CEO &amp; Founder</p>
+                        <p class="title">Backend/Frontend &amp; Develper</p>
                         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
                         <p>example@example.com</p>
                     </div>
