fix: fixed merge conflicts

--- a/darkmoon/api/templates/extract.html
+++ b/darkmoon/api/templates/extract.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
     <script src="https://unpkg.com/htmx.org@latest/dist/htmx.min.js"></script>
+    <script src="https://unpkg.com/htmx.org@latest/dist/htmx.min.js"></script>
 </head>
 
 <script type="text/javascript">
