feat: got the credits page working

--- a/darkmoon/api/templates/about.html
+++ b/darkmoon/api/templates/about.html
@@ -11,78 +11,40 @@
 <body>
 
     <header>
-
-
-
         <div class="logo">
-
-
-
             <h1 id="blackoutline">
-
-
-
                 <p>Darkmoon</p>
-
-
-
             </h1>
-
-
-
         </div>
-
-
-
         <nav>
-
-
-
             <ul>
                 <button class="dropbtn"><a href="/">Home</a></button>
                 <div class="dropdown">
-
-
-
                     <button class="button button1">Tools</button>
-
-
-
                     <div class="dropdown-content">
-
-
-
                         <a href="/hash-lookup">Hash Lookup</a>
-
                         <a href="/upload">ISO Upload</a>
-
-
                     </div>
-
-
-
                 </div>
-
                 <button class="dropbtn"><a href="/about">About</a></button>
-
             </ul>
-
-
-
         </nav>
-
-
-
     </header>
 
     <div style="padding:90px;">
+        <h2 class="name" id="border" style="color:white; text-align: center;">Paige Maute
+            <p class="title"> Team Lead</p>
+            <p>"We cannot solve our problems with the same thinking we used when we created them" - Albert Einstein</p>
+            <p class=link>github.com/DoodlePooge</p>
+        </h2>
+
         <div class="column">
             <div class="card">
                 <div class="container">
                     <h2>Mridula Thulasiraman</h2>
-                    <p class="title">Backend/Frontend &amp; Deveoper</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
+                    <p class="title">Developer</p>
+                    <p>"I am burdened with glorious commits"</p>
+                    <p class="link">github.com/thulasiramanmt</p>
                 </div>
             </div>
         </div>
@@ -90,10 +52,10 @@
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2>Mike Ross</h2>
-                    <p class="title">Art Director</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
+                    <h2>Pranav Elavarthi</h2>
+                    <p class="title">Developer</p>
+                    <p>"Kachow" </p>
+                    <p class="link">githuhb.com/pelavarthi</p>
                 </div>
             </div>
         </div>
@@ -101,60 +63,60 @@
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2>John Doe</h2>
-                    <p class="title">Designer</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
+                    <h2>Viraj Ganguli</h2>
+                    <p class="title">Developer</p>
+                    <p>"Why have a push day at the gym when you can push to the repo"</p>
+                    <p class="link">github.com/Viraj-Ganguli</p>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2>John Doe</h2>
-                    <p class="title">Designer</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
+                    <h2>Edward Kirsch</h2>
+                    <p class="title">Developer</p>
+                    <p>"Making a project is task of dedication, research and most of all collaboration"</p>
+                    <p class="link">github.com/XxXgamerguyXxX</p>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2>John Doe</h2>
-                    <p class="title">Designer</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
+                    <h2>Siri Chatradi</h2>
+                    <p class="title">Developer</p>
+                    <p>"Ew bugs.</p>
+                    <p class="link">github.com/siric-4321</p>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2>John Doe</h2>
-                    <p class="title">Designer</p>
+                    <h2>Sean Meyer</h2>
+                    <p class="title">Developer</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
+                    <p class="link">example@example.com</p>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2>John Doe</h2>
-                    <p class="title">Designer</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
+                    <h2>Asmita Karandikar</h2>
+                    <p class="title">Developer</p>
+                    <p>"Coding is my canvas, where logic becomes art and innovation knows no bounds."</p>
+                    <p class="link">github.com/asmitakarandikar</p>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2>John Doe</h2>
-                    <p class="title">Designer</p>
+                    <h2>Dominique Waldon</h2>
+                    <p class="title">Developer</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
+                    <p class="link">example@example.com</p>
                 </div>
             </div>
         </div>
