--- a/darkmoon/api/static/style.css
+++ b/darkmoon/api/static/style.css
@@ -528,13 +528,14 @@ input[type="submit"]:hover {
     width: 25%;
     margin-bottom: 16px;
     padding: 0 8px;
+
 }
 
 /* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 650px) {
     .column {
         width: 100%;
-        display: block;
+        display: inline-block;
     }
 }
 
@@ -542,11 +543,14 @@ input[type="submit"]:hover {
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     background-color: white;
+    padding: 40px;
+    height: 200px;
 }
 
 /* Some left and right padding inside the container */
 .container {
     padding: 0 16px;
+
 }
 
 /* Clear floats */
@@ -561,18 +565,21 @@ input[type="submit"]:hover {
     color: grey;
 }
 
-.button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
+.link {
+    color: #3498db
 }
 
+.name {
+    margin-top: 10px;
+    margin-bottom: 800px;
+}
+
+
 .button:hover {
-    background-color: #555;
+    background-color: #4069C9;
+}
+
+.row {
+    display: center;
+    margin-top: 300px;
 }
