132 create a form on the UI that hits the extract files endpoint (#136)
* feat: added extract.html

* feat: adding extract file

* feat: creating and connecting thr fom in extract.html to the extract files endpoint

* feat: adding a loading bar with a pop-up button and downloaded 7zip and connecting the form

* fix: popup loading screen so now loading bar disappears and hash-search error

* Extract files 409 bug (#138)

* fixing 409 bug and adding counter to file dupe checking

* chore: add schema type for database upload

* chore: add schema and change return types of utils and API endpoints

* fix: change 409 dupe metadata error to counter that counts the number of files that have been updated, added and their conflicts

* chore: rename counter opperations

* chore: rename 2 electric boogaloo

* chore: rename 3  maybe it'll work this time, lets see

---------

Co-authored-by: Sean Meyer <seanm0914@gmail.com>

* fix: update names for operation counters (#140)

* feat: creating and connecting thr fom in extract.html to the extract files endpoint

* fix: fixed merge conflicts

* feat: extract-files UI form

* feat: extract-files UI form

---------

Co-authored-by: Paige Maute <paige.maute@gmail.com>
Co-authored-by: Viraj Ganguli <85509166+Viraj-Ganguli@users.noreply.github.com>
Co-authored-by: Sean Meyer <seanm0914@gmail.com>
Co-authored-by: Sean Meyer <30555872+Synthint@users.noreply.github.com>

--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -158,11 +158,11 @@
 
                     <div class="dropdown-content">
 
-
-
                         <a href="/hash-lookup">Hash Lookup</a>
 
                         <a href="/upload">ISO Upload</a>
+
+                        <a href="/extract">Extract Files</a>
 
 
                     </div>
@@ -187,7 +187,7 @@
 
         <h1></h1>
 
-        <form id="hash_upload" hx-get="/metadata/hashSearch" hx-target="#hash_output" hx-trigger="submit"
+        <form id="hash_upload" hx-get="/metadata/hash-search" hx-target="#hash_output" hx-trigger="submit"
             hx-swap="innerHTML" onsubmit="showPopupBox()">
 
             <h3>Hash Search</h3>
@@ -208,18 +208,18 @@
 
         <div class="formPopup" id="popupForm">
 
-            <p id="hash_output"> </p>
+            <div id="hash_output">
+                <div id="load-button" class="loading-spinner"></div>
+            </div>
             <button type="button" class="btncancel" onclick="closeForm()">X</button>
 
         </div>
 
 
 
-
-
         <h2></h2>
 
-        <form id="file_upload" hx-trigger="submit" hx-post='/metadata/hashComparison' hx-target="#file_output"
+        <form id="file_upload" hx-trigger="submit" hx-post='/metadata/hash-comparison' hx-target="#file_output"
             hx-swap="innerHTML" hx-encoding='multipart/form-data'>
 
             <h3>Hash Comparison</h3>
@@ -242,7 +242,9 @@
 
         <div class="formPopup" id="popupForm">
 
-            <p id="file_output"> </p>
+            <div id="file_output">
+                <div id="load-button" class="loading-spinner"></div>
+            </div>
 
             <button type="button" class="btncancel" onclick="closeForm()">Close</button>
 
