feat: credits page done

--- a/darkmoon/api/templates/about.html
+++ b/darkmoon/api/templates/about.html
@@ -85,7 +85,7 @@
                 <div class="container">
                     <h2>Siri Chatradi</h2>
                     <p class="title">Developer</p>
-                    <p>"Ew bugs.</p>
+                    <p>"Ew bugs."</p>
                     <p class="link">github.com/siric-4321</p>
                 </div>
             </div>
@@ -95,8 +95,8 @@
                 <div class="container">
                     <h2>Sean Meyer</h2>
                     <p class="title">Developer</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p class="link">example@example.com</p>
+                    <p>"I have no insightful quotes to add"</p>
+                    <p class="link">github.com/Synthint</p>
                 </div>
             </div>
         </div>
@@ -115,8 +115,8 @@
                 <div class="container">
                     <h2>Dominique Waldon</h2>
                     <p class="title">Developer</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p class="link">example@example.com</p>
+                    <p>"The brain and the bronze."</p>
+                    <p class="link">github.com/dwaldon21</p>
                 </div>
             </div>
         </div>
