feat: credits page done

--- a/darkmoon/api/templates/about.html
+++ b/darkmoon/api/templates/about.html
@@ -85,7 +85,7 @@
                 <div class="container">
                     <h2>Siri Chatradi</h2>
                     <p class="title">Developer</p>
-                    <p>"Ew bugs."</p>
+                    <p>"Ew vegetables"</p>
                     <p class="link">github.com/siric-4321</p>
                 </div>
             </div>
