feat: fixed the nav bar

--- a/darkmoon/api/templates/about.html
+++ b/darkmoon/api/templates/about.html
@@ -6,6 +6,7 @@
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
 </head>
 
+
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 <body>
@@ -24,6 +25,7 @@
                     <div class="dropdown-content">
                         <a href="/hash-lookup">Hash Lookup</a>
                         <a href="/upload">ISO Upload</a>
+                        <a href="/extract">Extract Files</a>
                     </div>
                 </div>
                 <button class="dropbtn"><a href="/about">About</a></button>
