119 create credits webpage mt (#142)
* feat: changed credit page to about page

* feat: made about endpoint and removed variables css file calls

* feat: added about page and displayed developers

* feat: created a list of names

* feat: made css

* feat: made css

* feat: added cards to about page

* feat: got the credits page working

* feat: credits page done

* feat: credits page done

* feat: changed views from credits to aobut

* feat: fixed the changes requested

* feat: fixed the nav bar

---------

Signed-off-by: thulasiramanmt <128326984+thulasiramanmt@users.noreply.github.com>
Co-authored-by: Asmita Karandikar <asmitavk1@gmail.com>

--- a/darkmoon/api/static/style.css
+++ b/darkmoon/api/static/style.css
@@ -42,6 +42,13 @@ section {
     height: 80vh;
 }
 
+.row {
+    margin-right: 500px;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 article {
     float: left;
     padding: 20px;
@@ -245,6 +252,7 @@ input[type="submit"]:hover {
         mask: var(--corner) subtract, var(--inner);
         content: ''
     }
+
 }
 
 .results-container {
@@ -512,4 +520,66 @@ input[type="submit"]:hover {
 
     right: 0;
 
+}
+
+/* Three columns side by side */
+.column {
+    float: left;
+    width: 25%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+
+}
+
+/* Display the columns below each other instead of side by side on small screens */
+@media screen and (max-width: 650px) {
+    .column {
+        width: 100%;
+        display: inline-block;
+    }
+}
+
+/* Add some shadows to create a card effect */
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: white;
+    padding: 40px;
+    height: 200px;
+}
+
+/* Some left and right padding inside the container */
+.container {
+    padding: 0 16px;
+
+}
+
+/* Clear floats */
+.container::after,
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.title {
+    color: grey;
+}
+
+.link {
+    color: #3498db
+}
+
+.name {
+    margin-top: 10px;
+    margin-bottom: 800px;
+}
+
+
+.button:hover {
+    background-color: #4069C9;
+}
+
+.row {
+    display: center;
+    margin-top: 300px;
 }
