--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -171,7 +171,7 @@
 
                 </div>
 
-                <button class="dropbtn"><a href="/credit">Credit</a></button>
+                <button class="dropbtn"><a href="/about">About</a></button>
 
             </ul>
 
