--- a/darkmoon/api/templates/upload.html
+++ b/darkmoon/api/templates/upload.html
@@ -67,7 +67,7 @@
                     </div>
 
                 </div>
-                <button class="dropbtn"><a href="/credit">Credit</a></button>
+                <button class="dropbtn"><a href="/about">About</a></button>
             </ul>
 
         </nav>
