--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -41,7 +41,7 @@
                     </div>
 
                 </div>
-                <button class="dropbtn"><a href="/credit">Credit</a></button>
+                <button class="dropbtn"><a href="/about">About</a></button>
             </ul>
 
         </nav>
