fix: extrating multiple VMDKs now displays loading screen correctly

--- a/darkmoon/api/templates/extract.html
+++ b/darkmoon/api/templates/extract.html
@@ -27,8 +27,9 @@
 
     }
     function closeForm() {
-
+        document.getElementById("extract_output").innerHTML = "<div id=\"load-button\" class=\"loading-spinner\"></div>";
         document.getElementById("popupForm").style.display = "none";
+
 
 
     }
